--- a/src/main/R/badWeather/resultDemo.Rmd
+++ b/src/main/R/badWeather/resultDemo.Rmd
@@ -145,8 +145,11 @@ result_data <- result_data %>%
   mutate(trend = as.integer(date) - as.integer(min(result_data$date)))
 
 #Append holidays
-result_data <- result_data %>% left_join(df_holidays, by = "date") %>% replace_na(list(isHoliday = FALSE,snow = 0))
-#%>% filter(noRides != 0) #%>% filter(date <"2021-07-01")
+result_data <- result_data %>% left_join(df_holidays, by = "date") %>% replace_na(list(isHoliday = FALSE,snow = 0)) %>% 
+#%>% filter(noRides != 0) 
+ filter(date <= as.Date("2022-12-31")) #%>%
+  #filter(date > as.Date("2022-12-31"))
+  
 
 sundays <- result_data %>% 
   filter(wday == 7)
@@ -181,17 +184,26 @@ From already conducted analysis as well as the following plots we can see a stro
 
 ```{r plotting wday and holidays}
 
+colors <- c("Sun" = "darkorchid4","predicted" = "red", "Mon" = "darkblue", "Tue" = "deepskyblue4", "Wed" = "deepskyblue2", "Thu" = "cadetblue4", "Fri" = "chartreuse4", "Sat" = "darkgoldenrod2")
+
 plot_data <- result_data
   
 plot_data$isHoliday[plot_data$isHoliday==TRUE] <- "Holiday"
 plot_data$isHoliday[plot_data$isHoliday==FALSE] <- "Non-holiday"
 
 wday_plot <- ggplot(plot_data)+
-  geom_boxplot(aes(x = wday_char,y = noRides,col=wday_char)) +
+  geom_boxplot(data=plot_data %>% filter(wday_char=="Sun"),mapping=aes(x = wday_char,y = noRides,color="Sun")) +
+  geom_boxplot(data=plot_data %>% filter(wday_char=="Mon"),mapping=aes(x = wday_char,y = noRides,color="Mon")) +
+  geom_boxplot(data=plot_data %>% filter(wday_char=="Tue"),mapping=aes(x = wday_char,y = noRides,color="Tue")) +
+  geom_boxplot(data=plot_data %>% filter(wday_char=="Wed"),mapping=aes(x = wday_char,y = noRides,color="Wed")) +
+  geom_boxplot(data=plot_data %>% filter(wday_char=="Thu"),mapping=aes(x = wday_char,y = noRides,color="Thu")) +
+  geom_boxplot(data=plot_data %>% filter(wday_char=="Fri"),mapping=aes(x = wday_char,y = noRides,color="Fri")) +
+  geom_boxplot(data=plot_data %>% filter(wday_char=="Sat"),mapping=aes(x = wday_char,y = noRides,color="Sat")) +
   xlab("Weekday") + 
   ylab("Number of rides") +
   labs(title="Daily no of KEXI rides per weekday") +
-  theme(plot.title = element_text(hjust=0.5))
+  theme(plot.title = element_text(hjust=0.5)) +
+  scale_color_manual(values = colors)
 
 holiday_plot <- ggplot(plot_data)+
   geom_boxplot(aes(x = isHoliday, y = noRides)) +
@@ -255,7 +267,7 @@ To get a general impression of the above weather parameters' influence on the nu
 # print(cor(test_cor))
 
 best_pred <- result_data  %>% ungroup() %>%
-  dplyr::select(-noRides,-description ,-date, -trend,-season,-wday,-wday_char) %>%
+  dplyr::select(-noRides,-description ,-date,-trend,-season,-wday,-wday_char) %>%
   map_dbl(cor,y = result_data$noRides) %>%
   #map_dbl(abs) %>%
   sort(decreasing = TRUE) 
@@ -273,9 +285,10 @@ After the determination of correlations between the daily number of KEXI rides a
 data <- result_data
 
 # omega_model <- lm(noRides ~ tavg+pres+stringency+snow+wspd,data = data)
-omega_model <- lm(noRides ~ stringency+wspd+wpgt+wdir+snow+tmax+tavg+tmin+pres,data = data)
+omega_model <- lm(noRides ~ stringency+wspd+wpgt+wdir+snow+tmax+tavg+tmin+tdiff+pres,data = data)
 # omega_model <- lm(noRides ~ stringency+wspd+wpgt+snow+tmax+tavg+tmin+tdiff,data = data)
 # omega_model <- lm(noRides ~ wdir+snow+tmax+tavg+tmin+pres,data = data)
+# omega_model <- lm(noRides ~ wspd+wpgt+wdir+snow+tmax+tavg+tmin+pres+tdiff,data = data)
 
 summary(omega_model)
 
@@ -287,21 +300,40 @@ The above model implies that only the parameters stringency, tdiff and tavg are 
 
 ```{r omega residuals,out.width="100%"}
 
-# colors <- c("Sun" = "darkorchid4","predicted" = "red", "Mon" = "darkblue", "Tue" = "deepskyblue4", "Wed" = "deepskyblue2", "Thu" = "cadetblue4", "Fri" = "chartreuse4", "Sat" = "darkgoldenrod2", "residuals" = "gray50" )
-colors <- c("predicted" = "red")
+colors <- c("predicted" = "red", "Mon" = "darkblue", "Tue" = "deepskyblue4", "Wed" = "deepskyblue2", "Thu" = "cadetblue4", "Fri" = "chartreuse4")
 model <- omega_model
 test_data <- data %>% add_predictions(model = model) %>% add_residuals(model = model) %>% mutate(error = ifelse(abs(resid)>=20,"extreme","normal"))
 
-
 # ggplotly(ggplot(test_data %>% filter(year(date)>=2020)) +
-#   geom_point(aes(x = date,y = noRides,color = "observed"))+
-#   geom_point(aes(x = date,y = pred,color = "predicted"))+
+#   geom_point(data=test_data %>% filter(wday_char=="Mon"),mapping=aes(x = date,y = noRides,color="Mon"))+
+#   geom_point(data=test_data %>% filter(wday_char=="Tue"),mapping=aes(x = date,y = noRides,color="Tue"))+
+#   geom_point(data=test_data %>% filter(wday_char=="Wed"),mapping=aes(x = date,y = noRides,color="Wed"))+
+#   geom_point(data=test_data %>% filter(wday_char=="Thu"),mapping=aes(x = date,y = noRides,color="Thu"))+
+#   geom_point(data=test_data %>% filter(wday_char=="Fri"),mapping=aes(x = date,y = noRides,color="Fri"))+
+#   geom_line(aes(x = date,y = pred,color = "predicted"),size=1.2)+
+#     theme(legend.position = "bottom" ) +
+#   theme(axis.ticks.x = element_line(), 
+#                    axis.ticks.y = element_line(),
+#                    axis.ticks.length = unit(5, "pt")) +
 #   scale_color_manual(values = colors)+
-#   ggtitle("First Linear regression model"))
+#   theme_minimal()+
+#   xlab("Date") +
+#   scale_x_date(date_breaks = "4 month", date_labels = "%b/%y"))
+  # ggtitle("First Linear regression model"))
+
+# ggplot(test_data %>% filter(year(date)>=2020)) +
+#   geom_point(aes(x = date,y = noRides))+
+#   geom_line(mapping=aes(x = date,y = pred), size = 1.2) +
+#   labs(color="testd")
 
 ggplot(test_data %>% filter(year(date)>=2020)) +
-  geom_point(aes(x = date,y = noRides,col=wday_char))+
-  geom_line(mapping=aes(x = date,y = pred),col="red", size = 1.2)+
+  #geom_point(aes(x = date,y = noRides,col=wday_char))+
+  geom_point(data=test_data %>% filter(wday_char=="Mon"),mapping=aes(x = date,y = noRides,color="Mon"))+
+  geom_point(data=test_data %>% filter(wday_char=="Tue"),mapping=aes(x = date,y = noRides,color="Tue"))+
+  geom_point(data=test_data %>% filter(wday_char=="Wed"),mapping=aes(x = date,y = noRides,color="Wed"))+
+  geom_point(data=test_data %>% filter(wday_char=="Thu"),mapping=aes(x = date,y = noRides,color="Thu"))+
+  geom_point(data=test_data %>% filter(wday_char=="Fri"),mapping=aes(x = date,y = noRides,color="Fri"))+
+  geom_line(mapping=aes(x = date,y = pred,color="predicted"), size = 1.2)+
   theme_minimal() +
   xlab("Date") +
   theme(legend.position = "bottom", legend.title = element_blank()) +
@@ -309,8 +341,8 @@ ggplot(test_data %>% filter(year(date)>=2020)) +
                    axis.ticks.y = element_line(),
                    axis.ticks.length = unit(5, "pt")) +
   scale_x_date(date_breaks = "4 month", date_labels = "%b/%y") +
-  #scale_color_manual(values = colors) +
-  ggtitle("First Linear regression model")
+  scale_color_manual(values = colors) #+
+  # ggtitle("First Linear regression model")
 
 #ggsave("C:/Users/Simon/Desktop/wd/2023-07-31/first-regression-model.png", modelPlot)
 
@@ -325,9 +357,8 @@ ggplot(test_data %>% filter(year(date)>=2020)) +
 #             ggtitle("Residuals"))
 
 ggplot(test_data %>% filter(year(date)>=2020))+
-            geom_line(aes(x = date,y = resid,color = "residuals"))+
+            geom_line(aes(x = date,y = resid,color = "gray"))+
           #  geom_ref_line(h = 0)+
-            scale_color_manual(values = colors)+
            xlab("Date") +
            ylab("Residuals") +
            theme_minimal() +
@@ -343,35 +374,43 @@ The residuals plot indicates a continuous growing trend for the number of daily 
 ```{r omega date residuals,out.width="100%"}
 
 # omega_date_model = lm(noRides ~ tavg+pres+stringency+snow+date+season+wspd,data = data)
-omega_date_model <- lm(noRides ~ stringency+wspd+wpgt+wdir+snow+tmax+tavg+tmin+pres+trend,data = data)
+omega_date_model <- lm(noRides ~ stringency+wspd+wpgt+wdir+snow+tmax+tavg+tmin+tdiff+pres+trend,data = data)
 # omega_date_model<- lm(noRides ~ wdir+snow+tmax+tavg+tmin+pres+trend,data = data)
 # omega_date_model <- lm(noRides ~ stringency+wspd+wpgt+snow+tmax+tavg+tmin+tdiff+trend,data = data)
 
 summary(omega_date_model)
+
+omega_date_only_model <- lm(noRides ~ wspd+wpgt+wdir+snow+tmax+tavg+tmin+tdiff+pres+trend,data = data)
+summary(omega_date_only_model)
 ```
 
 
 
 ```{r,out.width="100%"}
-colors <- c("observed" = "blue","predicted" = "red","residuals" = "gray50","zerorides" = "purple")
-# colors <- c("Sun" = "darkorchid4","predicted" = "red", "Mon" = "darkblue", "Tue" = "deepskyblue4", "Wed" = "deepskyblue2", "Thu" = "cadetblue4", "Fri" = "chartreuse4", "Sat" = "darkgoldenrod2", "residuals" = "gray50" )
-model <- omega_date_model
+colors <- c("predicted" = "red", "Mon" = "darkblue", "Tue" = "deepskyblue4", "Wed" = "deepskyblue2", "Thu" = "cadetblue4", "Fri" = "chartreuse4")
+model <- omega_date_only_model
 test_data <- data %>% add_predictions(model = model) %>% add_residuals(model = model) %>% mutate(error = ifelse(abs(resid)>=20,"extreme","normal"))
 
-# cor_tmin_tavg <- cor(test_data$tmin, test_data$tavg)
+cor_stringency_noRides <- cor(test_data$stringency, test_data$noRides)
+cor_trend_noRides <- cor(test_data$trend, test_data$noRides)
 cor_stringency_trend <- cor(test_data$stringency, test_data$trend)
-# print(paste("correlation of tmin and tavg:",cor_tmin_tavg))
+
 print(paste("correlation of stringency and trend:",cor_stringency_trend))
+print(paste("correlation of stringency and noRides:",cor_stringency_noRides))
+print(paste("correlation of trend and noRides:",cor_trend_noRides))
 
 ggplotly(ggplot(test_data %>% filter(year(date)>=2020)) +
-  geom_point(aes(x = date,y = noRides,col=wday_char))+
-  geom_point(aes(x = date,y = pred),col="red")+
-  #scale_color_manual(values = colors)+
+  geom_point(data=test_data %>% filter(wday_char=="Mon"),mapping=aes(x = date,y = noRides,color="Mon"))+
+  geom_point(data=test_data %>% filter(wday_char=="Tue"),mapping=aes(x = date,y = noRides,color="Tue"))+
+  geom_point(data=test_data %>% filter(wday_char=="Wed"),mapping=aes(x = date,y = noRides,color="Wed"))+
+  geom_point(data=test_data %>% filter(wday_char=="Thu"),mapping=aes(x = date,y = noRides,color="Thu"))+
+  geom_point(data=test_data %>% filter(wday_char=="Fri"),mapping=aes(x = date,y = noRides,color="Fri"))+
+  geom_point(aes(x = date,y = pred,color="predicted"))+
+  scale_color_manual(values = colors)+
   ggtitle("Linear regression model with date parameter"))
 ggplotly(ggplot(test_data %>% filter(year(date)>=2020))+
-            geom_line(aes(x = date,y = resid,color = "residuals"))+
+            geom_line(aes(x = date,y = resid,color = "gray50"))+
             geom_ref_line(h = 0)+
-            scale_color_manual(values = colors)+
             ggtitle("Residuals over time"))
 
 ```
@@ -397,9 +436,13 @@ The above linear regression model includes multiple parameters, which are marked
 ```{r reduced model 1 residuals}
 
 # reduced_1_model <- lm(noRides ~ tavg+pres+stringency+snow+weather_impact*description+date+wspd,data = data)
-reduced_1_model <- lm(noRides ~ stringency+pres+trend, data = data)
+reduced_1_model <- lm(noRides ~ snow+tavg+trend, data = data)
 
 summary(reduced_1_model)
+
+reduced_1_model_update <- lm(noRides ~ tavg+trend, data = data)
+
+summary(reduced_1_model_update)
 
 # colors <- c("observed" = "blue","predicted" = "red","residuals" = "gray50","zerorides" = "purple")
 # model <- reduced_1_model
@@ -411,12 +454,11 @@ summary(reduced_1_model)
 ```{r reduced model 2 residuals}
 
 # reduced_2_model <- lm(noRides ~ tavg+pres+stringency+weather_impact+description+date,data = data)
-reduced_2_model <- lm(noRides ~ pres+trend, data = data)
+reduced_2_model <- lm(noRides ~ tavg+stringency, data = data)
 
 summary(reduced_2_model)
 
-colors <- c("observed" = "blue","predicted" = "red","residuals" = "gray50","zerorides" = "purple")
-# colors <- c("Sun" = "darkorchid4","predicted" = "red", "Mon" = "darkblue", "Tue" = "deepskyblue4", "Wed" = "deepskyblue2", "Thu" = "cadetblue4", "Fri" = "chartreuse4", "Sat" = "darkgoldenrod2", "residuals" = "gray50" )
+colors <- c("predicted" = "red", "Mon" = "darkblue", "Tue" = "deepskyblue4", "Wed" = "deepskyblue2", "Thu" = "cadetblue4", "Fri" = "chartreuse4")
 model <- reduced_2_model
 test_data <- data %>% add_predictions(model = model) %>% add_residuals(model = model) %>% mutate(error = ifelse(abs(resid)>=20,"extreme","normal"))
 
@@ -432,26 +474,35 @@ A last correlation check of the left variables (number of KEXI rides, tavg and t
 #data = data %>% filter(season == "summer")
 # reduced_3_model <- lm(noRides ~ tavg+stringency,data = data)
 cor_check <- data %>%
-  dplyr::select(noRides,tavg,trend)
+  dplyr::select(noRides,tavg,trend,snow)
 print(cor(cor_check))
 
 data <- data %>%
-  mutate(dateDependentTemperature = tavg * trend)
-reduced_3_model <- lm(noRides ~ pres+trend, data = data)
+  mutate(snowDependentTemperature = tavg * snow,
+         trendDependentSnow = snow * trend)
+reduced_3_model <- lm(noRides ~ snow+tavg+trend+snowDependentTemperature+trendDependentSnow, data = data)
 
 summary(reduced_3_model)
 
 confint(reduced_3_model) #95% confidence interval
 
-colors <- c("observed" = "blue","Predicted" = "red")
-# colors <- c("Sun" = "darkorchid4","predicted" = "red", "Mon" = "darkblue", "Tue" = "deepskyblue4", "Wed" = "deepskyblue2", "Thu" = "cadetblue4", "Fri" = "chartreuse4", "Sat" = "darkgoldenrod2", "residuals" = "gray50" )
-model <- reduced_3_model
+
+final_model <- lm(noRides ~ snow+tavg+trend, data = data)
+summary(final_model)
+confint(final_model) #95% confidence interval
+
+colors <- c("predicted" = "red", "Mon" = "darkblue", "Tue" = "deepskyblue4", "Wed" = "deepskyblue2", "Thu" = "cadetblue4", "Fri" = "chartreuse4")
+model <- final_model
 test_data <- data %>% add_predictions(model = model) %>% add_residuals(model = model) %>% mutate(error = ifelse(abs(resid)>=20,"extreme","normal"))
 
 
 ggplot(test_data %>% filter(year(date)>=2020)) +
-  geom_point(aes(x = date,y = noRides,col=wday_char))+
-  geom_line(aes(x = date,y = pred),col = "red", size = 1.2)+
+  geom_point(data=test_data %>% filter(wday_char=="Mon"),mapping=aes(x = date,y = noRides,color="Mon"))+
+  geom_point(data=test_data %>% filter(wday_char=="Tue"),mapping=aes(x = date,y = noRides,color="Tue"))+
+  geom_point(data=test_data %>% filter(wday_char=="Wed"),mapping=aes(x = date,y = noRides,color="Wed"))+
+  geom_point(data=test_data %>% filter(wday_char=="Thu"),mapping=aes(x = date,y = noRides,color="Thu"))+
+  geom_point(data=test_data %>% filter(wday_char=="Fri"),mapping=aes(x = date,y = noRides,color="Fri"))+
+  geom_line(aes(x = date,y = pred,color="predicted"), size = 1.2)+
   theme_minimal() +
   xlab("Date") +
   theme(legend.position = "bottom", legend.title = element_blank()) +
@@ -459,8 +510,8 @@ ggplot(test_data %>% filter(year(date)>=2020)) +
                    axis.ticks.y = element_line(),
                    axis.ticks.length = unit(5, "pt")) +
   scale_x_date(date_breaks = "4 month", date_labels = "%d/%b/%y") +
-  #scale_color_manual(values = colors) +
-  ggtitle("Linear regression model with independent variables pres and trend")
+  scale_color_manual(values = colors) #+
+  #ggtitle("Linear regression model with independent variables snow, tavg and trend")
 
 ggplot(test_data %>% filter(year(date)>=2020)) +
 geom_point(aes(x = pred,y = noRides)) +
@@ -476,7 +527,7 @@ theme(axis.ticks.x = element_line(),
 ```
 ```{r,,out.width="100%",out.height="95%"}
 ggplot(test_data %>% filter(year(date)>=2020))+
-            geom_line(aes(x = date,y = resid,color = "residuals"))+
+            geom_line(aes(x = date,y = resid,color = "gray50"))+
           #  geom_ref_line(h = 0)+
             scale_color_manual(values = colors)+
            xlab("Date") +
@@ -485,7 +536,7 @@ ggplot(test_data %>% filter(year(date)>=2020))+
            theme(axis.ticks.x = element_line(), 
       axis.ticks.y = element_line(),
       axis.ticks.length = unit(5, "pt"), legend.position = "none") +
-            ggtitle("Residuals over time for linear regression model with independent variables pres + trend")
+            ggtitle("Residuals over time for linear regression model with independent variables snow, tavg and trend")
 
 ggplot(test_data %>% filter(year(date)>=2020), aes(x = pred,y = resid))+
             geom_point()+
@@ -498,7 +549,7 @@ ggplot(test_data %>% filter(year(date)>=2020), aes(x = pred,y = resid))+
            theme(axis.ticks.x = element_line(), 
       axis.ticks.y = element_line(),
       axis.ticks.length = unit(5, "pt"), legend.position = "none") +
-            ggtitle("Residuals over predicted values for linear regression model with independent variables pres + trend")
+            ggtitle("Residuals over predicted values for linear regression model with independent variables snow, tavg and trend")
 
 ```
 
@@ -512,7 +563,7 @@ As the resulting linear regression model has been determined, in the concluding 
 
 barplot <- ggplot(test_data, aes(x = resid ))+
   geom_histogram(aes(y = stat(density)),colour="black", fill="white", binwidth=9)+
-  ggtitle("Final residuals distributions with independent variables pres + trend")
+  ggtitle("Final residuals distributions with independent variables snow, tavg and trend")
 
 ggplotly(barplot)
 
@@ -535,7 +586,9 @@ plot1 <- ggplot(test_data) +
   geom_qq(aes(sample=rnorm(resid,10,4)))+
   geom_abline(intercept = 10, slope = 4,color = "red", size = 1.5, alpha = 0.8)+
   theme_minimal() +
-  ggtitle("Normal QQ-Plot for the final linear regression model")
+  ggtitle("Normal QQ-Plot for the final linear regression model") +
+  xlab("Theoretical Quantiles") +
+  ylab("Model Residual Quantiles")
   
 # plot2 <- ggplotly(ggplot(test_data)+
 #   geom_point(aes(x = p, y = sort(pnorm(resid, m, s))))+
